@@ -3072,6 +3072,9 @@ do {
   return $m;
 } }
 ,
+
+
+
 '\\' => do { my $rule; $rule = sub {
   
               my $s       = $_[0] || '';
@@ -3099,11 +3102,142 @@ do {
       local $::_V6_PRIOR_ = $prior; 
       $bool = 0 unless
        (
-           ( $pad{I1232} = $pos or 1 ) 
+           ( $pad{I1199} = $pos or 1 ) 
            && (
            (
+               do{ 
+                   my $hash = do {
+                     my $bool = 1;
+                     my $from = $pos;
+                     my @match;
+                     my %named;
+                     $bool = 0 unless
+                       (
+                           ( $pad{I1200} = $pos or 1 ) 
+                           && (
+                             ( ( substr( $s, $pos, 1 ) eq 'c' ) 
+                                 ? ( $pos += 1 or 1 )
+                                 : 0
+                             )
+                           ) 
+                         || ( 
+                           ( ( $bool = 1 ) && ( $pos = $pad{I1200} ) or 1 ) 
+                           &&                              ( ( substr( $s, $pos, 1 ) eq 'C' ) 
+                                 ? ( $pos += 1 or 1 )
+                                 : 0
+                             )
+                         )
+                       );
+                     { str => \$s, from => \$from, match => \@match, named => \%named, bool => \$bool, to => \(0+$pos), capture => undef }
+                   };
+                   my $bool = ${$hash->{'bool'}};
+                   $match[ 0 ] = Pugs::Runtime::Match->new( $hash );
+                   $bool;
+               }
+           &&
+               ( ( substr( $s, $pos, 1 ) eq '[' ) 
+                   ? ( $pos += 1 or 1 )
+                   : 0
+               )
+           &&
+               do{ 
+                   my $hash = do {
+                     my $bool = 1;
+                     my $from = $pos;
+                     my @match;
+                     my %named;
+                     $bool = 0 unless
+                       (
+                           (
+                               ( $pad{I1201} = $pos or 1 ) 
+                               && (
+                                 do { 
+                my $prior = $::_V6_PRIOR_; 
+                my $match = 
+                                             $grammar->alnum( $s, { p => $pos, args => {} }, undef );
+                $::_V6_PRIOR_ = $prior; 
+                if ( $match ) { push @{$named{'alnum'}}, $match;
+                    $pos = $match->to; 
+                    1 
+                } 
+                else { 0 }
+            }
+                               ) 
+                             || ( 
+                               ( ( $bool = 1 ) && ( $pos = $pad{I1201} ) or 1 ) 
+                               &&                                  ( ( substr( $s, $pos ) =~ m/^(\s)/ )  
+                                     ? ( $pos += length( $1 ) or 1 )
+                                     : 0
+                                 )
+                               ) 
+                             || ( 
+                               ( ( $bool = 1 ) && ( $pos = $pad{I1201} ) or 1 ) 
+                               &&                                  ( ( substr( $s, $pos, 1 ) eq ';' ) 
+                                     ? ( $pos += 1 or 1 )
+                                     : 0
+                                 )
+                             )
+                           )
+                       && do { while (
+                           (
+                               ( $pad{I1201} = $pos or 1 ) 
+                               && (
+                                 do { 
+                my $prior = $::_V6_PRIOR_; 
+                my $match = 
+                                             $grammar->alnum( $s, { p => $pos, args => {} }, undef );
+                $::_V6_PRIOR_ = $prior; 
+                if ( $match ) { push @{$named{'alnum'}}, $match;
+                    $pos = $match->to; 
+                    1 
+                } 
+                else { 0 }
+            }
+                               ) 
+                             || ( 
+                               ( ( $bool = 1 ) && ( $pos = $pad{I1201} ) or 1 ) 
+                               &&                                  ( ( substr( $s, $pos ) =~ m/^(\s)/ )  
+                                     ? ( $pos += length( $1 ) or 1 )
+                                     : 0
+                                 )
+                               ) 
+                             || ( 
+                               ( ( $bool = 1 ) && ( $pos = $pad{I1201} ) or 1 ) 
+                               &&                                  ( ( substr( $s, $pos, 1 ) eq ';' ) 
+                                     ? ( $pos += 1 or 1 )
+                                     : 0
+                                 )
+                             )
+                           )) {}; $bool = 1 }
+                       ) ;
+                     { str => \$s, from => \$from, match => \@match, named => \%named, bool => \$bool, to => \(0+$pos), capture => undef }
+                   };
+                   my $bool = ${$hash->{'bool'}};
+                   $match[ 1 ] = Pugs::Runtime::Match->new( $hash );
+                   $bool;
+               }
+           &&
+               ( ( substr( $s, $pos, 1 ) eq ']' ) 
+                   ? ( $pos += 1 or 1 )
+                   : 0
+               )
+           &&
+do { 
+                    $::_V6_MATCH_ = $m; 
+                    local $::_V6_SUCCEED = 1;
+                    $m->data->{capture} = \( sub  { return({'special_char' => '\\' . $::_V6_MATCH_->[0] . $::_V6_MATCH_->[1]});
+ } ->() );
+                    $bool = $::_V6_SUCCEED;
+                    $::_V6_MATCH_ = $m if $bool; 
+                    return $m if $bool;
+                }
+           )
+           ) 
+         || ( 
+           ( ( $bool = 1 ) && ( $pos = $pad{I1199} ) or 1 ) 
+           &&            (
                (
-                   ( $pad{I1233} = $pos or 1 ) 
+                   ( $pad{I1202} = $pos or 1 ) 
                    && (
                      ( ( substr( $s, $pos, 1 ) eq 'x' ) 
                          ? ( $pos += 1 or 1 )
@@ -3111,21 +3245,157 @@ do {
                      )
                    ) 
                  || ( 
-                   ( ( $bool = 1 ) && ( $pos = $pad{I1233} ) or 1 ) 
+                   ( ( $bool = 1 ) && ( $pos = $pad{I1202} ) or 1 ) 
                    &&                      ( ( substr( $s, $pos, 1 ) eq 'X' ) 
                          ? ( $pos += 1 or 1 )
                          : 0
                      )
-                   ) 
-                 || ( 
-                   ( ( $bool = 1 ) && ( $pos = $pad{I1233} ) or 1 ) 
-                   &&                      ( ( substr( $s, $pos, 1 ) eq 'o' ) 
+                 )
+               )
+           &&
+             (
+                 do { 
+                my $prior = $::_V6_PRIOR_; 
+                my $match = 
+                             $grammar->xdigit( $s, { p => $pos, args => {} }, undef );
+                $::_V6_PRIOR_ = $prior; 
+                if ( $match ) { push @{$named{'xdigit'}}, $match;
+                    $pos = $match->to; 
+                    1 
+                } 
+                else { 0 }
+            }
+             && do { while (
+                 do { 
+                my $prior = $::_V6_PRIOR_; 
+                my $match = 
+                             $grammar->xdigit( $s, { p => $pos, args => {} }, undef );
+                $::_V6_PRIOR_ = $prior; 
+                if ( $match ) { push @{$named{'xdigit'}}, $match;
+                    $pos = $match->to; 
+                    1 
+                } 
+                else { 0 }
+            }) {}; $bool = 1 }
+             ) 
+           &&
+do { 
+                    $::_V6_MATCH_ = $m; 
+                    local $::_V6_SUCCEED = 1;
+                    $m->data->{capture} = \( sub  { return({'special_char' => '\\' . $::_V6_MATCH_});
+ } ->() );
+                    $bool = $::_V6_SUCCEED;
+                    $::_V6_MATCH_ = $m if $bool; 
+                    return $m if $bool;
+                }
+           )
+           ) 
+         || ( 
+           ( ( $bool = 1 ) && ( $pos = $pad{I1199} ) or 1 ) 
+           &&            (
+               do{ 
+                   my $hash = do {
+                     my $bool = 1;
+                     my $from = $pos;
+                     my @match;
+                     my %named;
+                     $bool = 0 unless
+                       (
+                           ( $pad{I1203} = $pos or 1 ) 
+                           && (
+                             ( ( substr( $s, $pos, 1 ) eq 'x' ) 
+                                 ? ( $pos += 1 or 1 )
+                                 : 0
+                             )
+                           ) 
+                         || ( 
+                           ( ( $bool = 1 ) && ( $pos = $pad{I1203} ) or 1 ) 
+                           &&                              ( ( substr( $s, $pos, 1 ) eq 'X' ) 
+                                 ? ( $pos += 1 or 1 )
+                                 : 0
+                             )
+                         )
+                       );
+                     { str => \$s, from => \$from, match => \@match, named => \%named, bool => \$bool, to => \(0+$pos), capture => undef }
+                   };
+                   my $bool = ${$hash->{'bool'}};
+                   $match[ 0 ] = Pugs::Runtime::Match->new( $hash );
+                   $bool;
+               }
+           &&
+               ( ( substr( $s, $pos, 1 ) eq '[' ) 
+                   ? ( $pos += 1 or 1 )
+                   : 0
+               )
+           &&
+               do{ 
+                   my $hash = do {
+                     my $bool = 1;
+                     my $from = $pos;
+                     my @match;
+                     my %named;
+                     $bool = 0 unless
+                       (
+                           do { 
+                my $prior = $::_V6_PRIOR_; 
+                my $match = 
+                                       $grammar->xdigit( $s, { p => $pos, args => {} }, undef );
+                $::_V6_PRIOR_ = $prior; 
+                if ( $match ) { push @{$named{'xdigit'}}, $match;
+                    $pos = $match->to; 
+                    1 
+                } 
+                else { 0 }
+            }
+                       && do { while (
+                           do { 
+                my $prior = $::_V6_PRIOR_; 
+                my $match = 
+                                       $grammar->xdigit( $s, { p => $pos, args => {} }, undef );
+                $::_V6_PRIOR_ = $prior; 
+                if ( $match ) { push @{$named{'xdigit'}}, $match;
+                    $pos = $match->to; 
+                    1 
+                } 
+                else { 0 }
+            }) {}; $bool = 1 }
+                       ) ;
+                     { str => \$s, from => \$from, match => \@match, named => \%named, bool => \$bool, to => \(0+$pos), capture => undef }
+                   };
+                   my $bool = ${$hash->{'bool'}};
+                   $match[ 1 ] = Pugs::Runtime::Match->new( $hash );
+                   $bool;
+               }
+           &&
+               ( ( substr( $s, $pos, 1 ) eq ']' ) 
+                   ? ( $pos += 1 or 1 )
+                   : 0
+               )
+           &&
+do { 
+                    $::_V6_MATCH_ = $m; 
+                    local $::_V6_SUCCEED = 1;
+                    $m->data->{capture} = \( sub  { return({'special_char' => '\\' . $::_V6_MATCH_->[0] . $::_V6_MATCH_->[1]});
+ } ->() );
+                    $bool = $::_V6_SUCCEED;
+                    $::_V6_MATCH_ = $m if $bool; 
+                    return $m if $bool;
+                }
+           )
+           ) 
+         || ( 
+           ( ( $bool = 1 ) && ( $pos = $pad{I1199} ) or 1 ) 
+           &&            (
+               (
+                   ( $pad{I1204} = $pos or 1 ) 
+                   && (
+                     ( ( substr( $s, $pos, 1 ) eq 'o' ) 
                          ? ( $pos += 1 or 1 )
                          : 0
                      )
                    ) 
                  || ( 
-                   ( ( $bool = 1 ) && ( $pos = $pad{I1233} ) or 1 ) 
+                   ( ( $bool = 1 ) && ( $pos = $pad{I1204} ) or 1 ) 
                    &&                      ( ( substr( $s, $pos, 1 ) eq 'O' ) 
                          ? ( $pos += 1 or 1 )
                          : 0
@@ -3157,7 +3427,7 @@ do {
            )
            ) 
          || ( 
-           ( ( $bool = 1 ) && ( $pos = $pad{I1232} ) or 1 ) 
+           ( ( $bool = 1 ) && ( $pos = $pad{I1199} ) or 1 ) 
            &&            (
                do{ 
                    my $hash = do {
@@ -3167,29 +3437,15 @@ do {
                      my %named;
                      $bool = 0 unless
                        (
-                           ( $pad{I1234} = $pos or 1 ) 
+                           ( $pad{I1205} = $pos or 1 ) 
                            && (
-                             ( ( substr( $s, $pos, 1 ) eq 'x' ) 
+                             ( ( substr( $s, $pos, 1 ) eq 'o' ) 
                                  ? ( $pos += 1 or 1 )
                                  : 0
                              )
                            ) 
                          || ( 
-                           ( ( $bool = 1 ) && ( $pos = $pad{I1234} ) or 1 ) 
-                           &&                              ( ( substr( $s, $pos, 1 ) eq 'X' ) 
-                                 ? ( $pos += 1 or 1 )
-                                 : 0
-                             )
-                           ) 
-                         || ( 
-                           ( ( $bool = 1 ) && ( $pos = $pad{I1234} ) or 1 ) 
-                           &&                              ( ( substr( $s, $pos, 1 ) eq 'o' ) 
-                                 ? ( $pos += 1 or 1 )
-                                 : 0
-                             )
-                           ) 
-                         || ( 
-                           ( ( $bool = 1 ) && ( $pos = $pad{I1234} ) or 1 ) 
+                           ( ( $bool = 1 ) && ( $pos = $pad{I1205} ) or 1 ) 
                            &&                              ( ( substr( $s, $pos, 1 ) eq 'O' ) 
                                  ? ( $pos += 1 or 1 )
                                  : 0
@@ -3250,7 +3506,7 @@ do {
            )
            ) 
          || ( 
-           ( ( $bool = 1 ) && ( $pos = $pad{I1232} ) or 1 ) 
+           ( ( $bool = 1 ) && ( $pos = $pad{I1199} ) or 1 ) 
            &&            (
                ( substr( $s, $pos++, 1 ) ne '' )
            &&
@@ -3280,6 +3536,9 @@ do {
   return $m;
 } }
 ,
+
+
+
 '.' => do { my $rule; $rule = sub {
   
               my $s       = $_[0] || '';
