@@ -1,5 +1,7 @@
+- implemented hex/octal/named constants - \x, \o, \c, \X, \O, \C
+- added Unicode properties, such as <isL> <!isL> <+isL> <-isL> 
 - added StrPos class (Pugs::Runtime::StrPos)
-  - Match->from() and Match->to now return Pugs::Runtime::StrPos objects.
+  #reverted - Match->from() and Match->to now return Pugs::Runtime::StrPos objects.
   - for non-OO positions, use Match->to_codes and Match->from_codes 
 - fixed non-capturing subrules in regex
 - fixed <-alpha>
